<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_detail_doctor"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:background="@drawable/bg_detail_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Toolbar
        android:id="@+id/tb_detail_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_white_back"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wback_arrow"
            android:contentDescription="@string/icon_back" />

        <TextView
            android:id="@+id/tv_detail_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/detail_doctor"/>

    </Toolbar>

    <View
        android:id="@+id/view_doctor_spesialis"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_92"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_dialog"
        app:layout_constraintBottom_toBottomOf="@+id/view_detail_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_detail_doctor" />

    <TextView
        android:id="@+id/tv_doctor_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dr_bagas"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/tv_spesialis_jantung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/spesialis_jantung"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="143dp" />

    <ImageView
        android:id="@+id/iv_photo_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/doctor_image"
        tools:layout_editor_absoluteX="324dp"
        tools:layout_editor_absoluteY="107dp" />

    <View
        android:id="@+id/view_patient"
        android:layout_width="@dimen/dimens_115"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginStart="@dimen/dimens_16"
        android:background="@drawable/bg_search_2"
        app:layout_constraintTop_toBottomOf="@id/view_doctor_spesialis"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/patient"
        android:textSize="@dimen/font_16"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/tv_number_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/number_patient"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="224dp" />

    <View
        android:id="@+id/view_experience"
        android:layout_width="@dimen/dimens_115"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginTop="@dimen/dimens_16"
        android:background="@drawable/bg_search_2"
        app:layout_constraintTop_toBottomOf="@id/view_doctor_spesialis"
        app:layout_constraintEnd_toStartOf="@id/view_rating"
        app:layout_constraintStart_toEndOf="@id/view_patient" />

    <TextView
        android:id="@+id/tv_experince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/experience"
        android:textSize="@dimen/font_16"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/tv_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="230dp" />

    <View
        android:id="@+id/view_rating"
        android:layout_width="@dimen/dimens_115"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:background="@drawable/bg_search_2"
        app:layout_constraintTop_toBottomOf="@id/view_doctor_spesialis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_experience" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rating"
        android:textSize="@dimen/font_16"
        tools:layout_editor_absoluteX="299dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/tv_rating_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rating_number"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="308dp" />

    <TextView
        android:id="@+id/tv_about_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="280dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/about_doctor"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_patient" />

    <TextView
        android:id="@+id/tv_text_about_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_about_doctor"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_doctor" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="320dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_about_doctor" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="345dp"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_name_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="172dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/rs_name"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_alamat_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toEndOf="@+id/iv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_rs" />

    <TextView
        android:id="@+id/tv_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="312dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/education"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alamat_rs" />

    <TextView
        android:id="@+id/tv_ugm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="218dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/ugm"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_education" />

    <TextView
        android:id="@+id/tv_dokter_spesialis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="213dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dokter_spesialis_anestesiologi"
        android:textColor="@color/black"
        android:textSize="@dimen/font_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ugm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_book_appointment"
        style="@style/buttonRounded"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_48"
        android:layout_marginEnd="@dimen/dimens_16"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/button"
        android:text="@string/book_appointment"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dokter_spesialis" />


</androidx.constraintlayout.widget.ConstraintLayout>