<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/tb_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/icon_back" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"/>

    </Toolbar>

    <TextView
        android:id="@+id/tv_title_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_32"
        android:text="@string/reset_password"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/font_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_forgot_password" />

    <TextView
        android:id="@+id/tv_desc_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:text="@string/label_enter_name"
        android:textSize="@dimen/font_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_29"
        android:layout_marginEnd="@dimen/dimens_16"
        android:hint="@string/hint_email"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_20"
        app:boxCornerRadiusBottomStart="@dimen/dimens_20"
        app:boxCornerRadiusTopEnd="@dimen/dimens_20"
        app:boxCornerRadiusTopStart="@dimen/dimens_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_reset_password"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_instruction"
        style="@style/buttonRounded"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginStart="@dimen/dimens_16"
        android:layout_marginTop="@dimen/dimens_24"
        android:layout_marginEnd="@dimen/dimens_16"
        android:text="@string/label_send_instruction"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email" />

</androidx.constraintlayout.widget.ConstraintLayout>