<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.OnBoardingFragment">

    <TextView
        android:id="@+id/tv_title_on_boarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_48"
        android:layout_marginStart="@dimen/dimens_40"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/font_32"
        android:textColor="@color/text_black"
        android:text="@string/title_on_boarding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_desc_on_boarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_marginStart="@dimen/dimens_40"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/font_16"
        android:textColor="@color/text_black"
        android:text="@string/desc_on_boarding"
        app:layout_constraintTop_toBottomOf="@id/tv_title_on_boarding"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        style="@style/buttonRounded"
        android:layout_width="@dimen/dimens_150"
        android:layout_height="@dimen/dimens_56"
        android:layout_marginStart="@dimen/dimens_40"
        android:layout_marginTop="@dimen/dimens_40"
        app:backgroundTint="@color/secondary"
        android:text="@string/btn_get_started"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_on_boarding"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_on_boarding_illustration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/onboarding_illustration" />

</androidx.constraintlayout.widget.ConstraintLayout>