<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dimens_16"
    android:background="@drawable/bg_booking_dokter">

<com.makeramen.roundedimageview.RoundedImageView
    android:id="@+id/iv_dokter"
    android:layout_width="@dimen/dimens_75"
    android:layout_height="@dimen/dimens_75"
    android:layout_marginTop="@dimen/dimens_16"
    android:layout_marginStart="@dimen/dimens_16"
    android:layout_marginBottom="@dimen/dimens_16"
    android:src="@drawable/ic_launcher_background"
    app:layout_goneMarginBottom="@dimen/dimens_16"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:riv_corner_radius="@dimen/dimens_12"/>

    <TextView
        android:id="@+id/tv_nama_dokter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/font_16"
        android:text="@string/doctor_name"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toEndOf="@+id/iv_dokter"
        app:layout_constraintTop_toTopOf="@id/iv_dokter"/>

    <TextView
        android:id="@+id/tv_pekerjaan_dokter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/font_14"
        android:text="@string/pekerjaan_dokter"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toEndOf="@+id/iv_dokter"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_dokter"/>

    <TextView
        android:id="@+id/tv_consulting_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/font_14"
        android:text="@string/consulting_service"
        app:layout_constraintTop_toBottomOf="@id/iv_dokter"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_price_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/font_14"
        android:text="@string/dummy_price_booking"
        android:textColor="@color/text_black"
        app:layout_constraintTop_toBottomOf="@id/tv_consulting_services"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_book"
        style="@style/buttonRounded"
        android:layout_width="@dimen/dimens_132"
        android:layout_height="@dimen/dimens_42"
        android:layout_marginStart="@dimen/dimens_72"
        android:backgroundTint="@color/button"
        android:text="@string/booking"
        app:layout_constraintStart_toEndOf="@id/tv_consulting_services"
        app:layout_constraintTop_toTopOf="@id/tv_consulting_services" />

</androidx.constraintlayout.widget.ConstraintLayout>