<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimens_16">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16"
        android:layout_marginEnd="@dimen/dimens_16"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_56"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/label_failed"
        android:textColor="@color/text_black"
        android:textSize="@dimen/font_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/description_failed"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_failed" />

    <ImageView
        android:id="@+id/iv_logo_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_36"
        android:src="@drawable/ic_failed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_66"
        android:layout_marginTop="@dimen/dimens_56"
        android:layout_marginEnd="@dimen/dimens_66"
        android:layout_marginBottom="@dimen/dimens_32"
        android:background="@drawable/bg_rounded_corner"
        android:backgroundTint="@color/error"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/label_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_failed" />

</androidx.constraintlayout.widget.ConstraintLayout>